Fixed overflow
Fixed card overflow issue.

--- a/Joost/styles.css
+++ b/Joost/styles.css
@@ -23,6 +23,7 @@
 body {
     background-color: #DCDCDC;
     margin: 1em;
+    overflow-x: hidden;
 }
 
 
